--- a/style/style.css
+++ b/style/style.css
@@ -1,84 +1,4 @@
 @charset "UTF-8";
-/* coloca botones del nav al final */
-.barra_final {
-  justify-content: end;
-}
-
-/* color principal header y footer */
-.color {
-  background-color: #DD5353; /* mapa */
-}
-
-/* aplica flex y alinea titulo de la pagina y logo */
-.titulo_logo {
-  display: flex;
-  align-items: center;
-}
-
-/* modifica el tamaño del logo */
-.logo {
-  max-width: 20%;
-}
-
-/* hace un flex en la descripcion y alinea y le da padding y color */
-.descripcion {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  background-color: #DBC8AC; /* mapa */
-}
-
-/* agrega color de fondo a la parte de pedidos */
-.pedidos {
-  background-color: #DBC8AC; /* mapa */
-}
-
-/* le cambia el tamaño a la foto de la descripcion */
-.imagen_descripcion {
-  max-width: 60%;
-}
-
-/* a el bloque que contiene a la imagen de la descripcion le aplica un flex para ubicarlo en el centro */
-.imagen_flex {
-  display: flex;
-  justify-content: center;
-}
-
-.texto_descripcion {
-  text-align: center;
-  width: 85%;
-}
-
-body header nav div a h2 {
-  margin-bottom: 0;
-}
-
-body header nav div #navbarNav ul li a h5 {
-  margin-bottom: 0;
-}
-
-body header nav div a {
-  padding-top: 0%;
-  padding-bottom: 0%;
-}
-
-.imageMio {
-  max-width: 100%;
-}
-
-h3 {
-  margin-bottom: 0;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: #DBC8AC; /* mapa */
-}
-
 @media screen and (min-width: 320px) {
   #grilla_inicio {
     display: flex;
@@ -121,6 +41,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  #carousel {
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
   #titulo_fotos_galeria h5 {
     color: rgba(240, 248, 255, 0.763); /* variable */
@@ -213,11 +137,13 @@ body {
     position: absolute;
     bottom: 0;
     background: rgba(0, 0, 0, 0.7);
-    color: #f1f1f1; /* mapa */
+    color: #f1f1f1;
+    /* mapa */
     width: 100%;
     transition: 0.5s;
     opacity: 0;
-    color: white; /* mapa */
+    color: white;
+    /* mapa */
     font-size: 20px;
     padding: 20px;
     text-align: center;
@@ -225,4 +151,83 @@ body {
   .containerMio:hover .overlayMio {
     opacity: 1;
   }
+}
+/* coloca botones del nav al final */
+.barra_final {
+  justify-content: end;
+}
+
+/* color principal header y footer */
+.color {
+  background-color: #DD5353; /* mapa */
+}
+
+/* aplica flex y alinea titulo de la pagina y logo */
+.titulo_logo {
+  display: flex;
+  align-items: center;
+}
+
+/* modifica el tamaño del logo */
+.logo {
+  max-width: 20%;
+}
+
+/* hace un flex en la descripcion y alinea y le da padding y color */
+.descripcion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #DBC8AC; /* mapa */
+}
+
+/* agrega color de fondo a la parte de pedidos */
+.pedidos {
+  background-color: #DBC8AC; /* mapa */
+}
+
+/* le cambia el tamaño a la foto de la descripcion */
+.imagen_descripcion {
+  max-width: 60%;
+}
+
+/* a el bloque que contiene a la imagen de la descripcion le aplica un flex para ubicarlo en el centro */
+.imagen_flex {
+  display: flex;
+  justify-content: center;
+}
+
+.texto_descripcion {
+  text-align: center;
+  width: 85%;
+}
+
+body header nav div a h2 {
+  margin-bottom: 0;
+}
+
+body header nav div #navbarNav ul li a h5 {
+  margin-bottom: 0;
+}
+
+body header nav div a {
+  padding-top: 0%;
+  padding-bottom: 0%;
+}
+
+.imageMio {
+  max-width: 100%;
+}
+
+h3 {
+  margin-bottom: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #DBC8AC; /* mapa */
 }/*# sourceMappingURL=style.css.map */
