--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,5 @@
 @import"./colores/colores";
-
+@import"./media/media";
 /* coloca botones del nav al final */
 .barra_final {
     justify-content: end;
@@ -15,7 +15,6 @@
     display: flex;
     align-items: center;
 }
-
 /* modifica el tamaño del logo */
 .logo {
     max-width: 20%;
@@ -78,213 +77,4 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: map-get($map: $colores, $key: main);/* mapa */
-}
-
-@media screen and (min-width:320px) {
-    #grilla_inicio {
-        display: flex;
-        flex-direction: column;
-        background-color: map-get($map: $colores, $key: main);/* mapa */
-        gap: 5px;
-        padding-top: 1%;
-        padding-bottom: 1%;
-    }
-
-    #grilla_inicio section {
-        display: flex;
-        justify-content: center;
-    }
-
-    #grilla_inicio section img {
-        max-width: 98%;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-        margin-top: auto;
-    }
-
-    #ig img {
-        max-width: 6%;
-    }
-
-    #fb img {
-        max-width: 6%;
-    }
-
-    #redes {
-        text-align: center;
-    }
-
-    #derechos h5 {
-        margin: 0;
-    }
-
-    #grilla_galeria {
-        display: none;
-    }
-
-    #grilla_galeria section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #titulo_fotos_galeria h5 {
-        color: $color_letra_recuadro_imagenes;/* variable */
-    }
-
-    #titulo_fotos_galeria {
-        background-color: $color_recuadro_imagenes;/* variable */
-    }
-}
-
-
-
-
-
-
-@media screen and (min-width:992px) {
-    .color_botones {
-        background-color: map-get($map: $colores, $key: botones_nav);/* mapa */
-    }
-
-    #ig img {
-        max-width: 3%;
-    }
-
-    #fb img {
-        max-width: 3%;
-    }
-}
-
-
-
-
-
-
-
-@media screen and (min-width:1024px) {
-    #grilla_inicio {
-        display: flex;
-        flex-direction: row;
-
-    }
-
-    #footer {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    #grilla_galeria {
-        display: grid;
-        grid-template-areas:
-            "g1 g2 g3"
-            "g4 g5 g6"
-            "g7 g8 g9"
-            "g10 g11 g12";
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        background-color: map-get($map: $colores, $key: main); /* mapa */
-        gap: 2px;
-    }
-
-    #carousel {
-        display: none;
-    }
-
-    #g1 {
-        grid-area: g1;
-    }
-
-    #g2 {
-        grid-area: g2;
-    }
-
-    #g3 {
-        grid-area: g3;
-    }
-
-    #g4 {
-        grid-area: g4;
-    }
-
-    #g5 {
-        grid-area: g5;
-    }
-
-    #g6 {
-        grid-area: g6;
-    }
-
-    #g7 {
-        grid-area: g7;
-    }
-
-    #g8 {
-        grid-area: g8;
-    }
-
-    #g9 {
-        grid-area: g9;
-    }
-
-    #g10 {
-        grid-area: g10;
-    }
-
-    #g11 {
-        grid-area: g11;
-    }
-
-    #g12 {
-        grid-area: g12;
-    }
-
-}
-
-
-
-
-
-
-
-@media screen and (min-width:1200px) {
-    #grilla_galeria {
-        grid-template-areas:
-            "g1 g2 g3 g4"
-            "g5 g6 g7 g8"
-            "g9 g10 g11 g12";
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-    }
-
-    .containerMio {
-        position: relative;
-
-    }
-
-    .overlayMio {
-        position: absolute;
-        bottom: 0;
-        background: rgba(0, 0, 0, 0.7);
-        color: map-get($map: $colores, $key:overlay); /* mapa */
-        width: 100%;
-        transition: 0.5s;
-        opacity: 0;
-        color: map-get($map: $colores, $key: letras_overlay);/* mapa */
-        font-size: 20px;
-        padding: 20px;
-        text-align: center;
-    }
-
-    .containerMio:hover .overlayMio {
-        opacity: 1;
-    }
 }
