cambie el inicio, ahora tiene 2 imagenes y texto que esta con animacion. le agregue alt a las imagenes. la galeria en la media table la cambie, ahora el titulo de las imagenes aparece superpuesto a las mismas, y con sus respectivos alt. cambie la seccion de pedidos y contacto, ahora estan hechas con bootstrap totalmente responsive, con anchos de algunos formularios reducidos. agregue varias clases al sass relacionadas los formularios de la seccion contacto y pedidos. la media querie de mobile para el index la cambie, la disposicion de objetos esta adaptada a esa media quierie, con algunas clases relacionadas a las imagenes del inicio, boton que manda a la galeria, corregi un error que aparecia en el icono de instagram

--- a/style/style.scss
+++ b/style/style.scss
@@ -78,3 +78,23 @@ body {
     min-height: 100vh;
     background-color: map-get($map: $colores, $key: main);/* mapa */
 }
+
+#selector{
+    width: 325px;
+}
+
+#selector2{
+    width: 220px;
+}
+#boton{
+    padding-top: 1%;
+}
+
+#exampleFormControlInput1{
+    width: 300px;
+}
+
+#formulario{
+    padding-top: 1%;
+}
+
