--- a/style/media/_media.scss
+++ b/style/media/_media.scss
@@ -2,21 +2,66 @@
 
 @media screen and (min-width:320px) {
     #grilla_inicio {
-        display: flex;
-        flex-direction: column;
-        background-color: map-get($map: $colores, $key: main);/* mapa */
-        gap: 5px;
-        padding-top: 1%;
-        padding-bottom: 1%;
+        display: grid;
+        grid-template-areas:
+            "texto"
+            "imagen"
+            "imagen2"
+            "texto2";
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.3fr 1fr 1fr 0.3fr;
+        align-items: center;
+        justify-content: center;
     }
 
-    #grilla_inicio section {
+    #texto1 {
+        grid-area: texto;
+        text-align: center;
+    }
+
+    #texto2 {
+        grid-area: texto2;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #imagen_inicio1 {
+        grid-area: imagen;
+        display: flex;
+        justify-content: center;
+        padding: 1%;
+    }
+
+    #imagen_inicio2 {
+        grid-area: imagen2;
+        display: flex;
+        justify-content: center;
+        padding: 1%;
+    }
+
+    #boton_a_galeria {
+        grid-area: galeria;
+        text-align: center;
         display: flex;
         justify-content: center;
     }
 
-    #grilla_inicio section img {
-        max-width: 98%;
+    #boton_a_galeria {
+        a {
+            text-decoration: none;
+            background-color: map-get($colores, $key: footer_header);
+            border-radius: 4px;
+            padding: 1%;
+
+        }
+    }
+
+
+    .imagen_inicio {
+        max-width: 90%;
     }
 
     .footer {
@@ -25,6 +70,10 @@
         align-items: center;
         height: auto;
         margin-top: auto;
+    }
+
+    #ig {
+        text-decoration: none;
     }
 
     #ig img {
@@ -59,17 +108,20 @@
     }
 
     #titulo_fotos_galeria h5 {
-        color: $color_letra_recuadro_imagenes;/* variable */
+        color: $color_letra_recuadro_imagenes;
+        /* variable */
     }
 
     #titulo_fotos_galeria {
-        background-color: $color_recuadro_imagenes;/* variable */
+        background-color: $color_recuadro_imagenes;
+        /* variable */
     }
 }
 
 @media screen and (min-width:992px) {
     .color_botones {
-        background-color: map-get($map: $colores, $key: botones_nav);/* mapa */
+        background-color: map-get($map: $colores, $key: botones_nav);
+        /* mapa */
     }
 
     #ig img {
@@ -83,9 +135,42 @@
 
 @media screen and (min-width:1024px) {
     #grilla_inicio {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-areas:
+            "texto imagen"
+            "imagen2 texto2";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr auto;
+        align-items: center;
+        justify-content: center;
+        padding: 1%;
     }
+
+    .imagen_inicio {
+        max-width: 60%;
+        border-radius: 2%;
+    }
+
+    #texto1 {
+        grid-area: texto;
+        text-align: center;
+    }
+
+    #texto2 {
+        grid-area: texto2;
+        text-align: center;
+    }
+
+    #imagen_inicio1 {
+        grid-area: imagen;
+    }
+
+    #imagen_inicio2 {
+        grid-area: imagen2;
+        display: flex;
+        justify-content: center;
+    }
+
 
     #footer {
         flex-direction: row;
@@ -104,8 +189,28 @@
         grid-template-rows: 1fr 1fr 1fr 1fr;
         padding-top: 1%;
         padding-bottom: 1%;
-        background-color: map-get($map: $colores, $key: main);/* mapa */
+        background-color: map-get($map: $colores, $key: main);
+        /* mapa */
         gap: 2px;
+        
+    } 
+    .containerMio {
+        position: relative;
+    }
+    .overlayMio{
+        position: absolute;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.7);
+        color: map-get($map: $colores, $key: overlay);
+        /* mapa */
+        width: 100%;
+        transition: 0.5s;
+        opacity: 1;
+        color: map-get($map: $colores, $key: letras_overlay);
+        /* mapa */
+        font-size: 20px;
+        padding: 20px;
+        text-align: center;
     }
 
     #carousel {
@@ -159,7 +264,6 @@
     #g12 {
         grid-area: g12;
     }
-
 }
 
 @media screen and (min-width:1200px) {
@@ -172,15 +276,13 @@
         grid-template-rows: 1fr 1fr 1fr;
     }
 
-    .containerMio {
-        position: relative;
-    }
+
 
     .overlayMio {
         position: absolute;
         bottom: 0;
         background: rgba(0, 0, 0, 0.7);
-        color: map-get($map: $colores, $key:overlay);
+        color: map-get($map: $colores, $key: overlay);
         /* mapa */
         width: 100%;
         transition: 0.5s;
@@ -195,4 +297,5 @@
     .containerMio:hover .overlayMio {
         opacity: 1;
     }
+    
 }
