--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,51 @@
 @charset "UTF-8";
 @media screen and (min-width: 320px) {
   #grilla_inicio {
-    display: flex;
-    flex-direction: column;
-    background-color: #DBC8AC; /* mapa */
-    gap: 5px;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    display: grid;
+    grid-template-areas: "texto" "imagen" "imagen2" "texto2";
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.3fr 1fr 1fr 0.3fr;
+    align-items: center;
+    justify-content: center;
   }
-  #grilla_inicio section {
+  #texto1 {
+    grid-area: texto;
+    text-align: center;
+  }
+  #texto2 {
+    grid-area: texto2;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  #imagen_inicio1 {
+    grid-area: imagen;
+    display: flex;
+    justify-content: center;
+    padding: 1%;
+  }
+  #imagen_inicio2 {
+    grid-area: imagen2;
+    display: flex;
+    justify-content: center;
+    padding: 1%;
+  }
+  #boton_a_galeria {
+    grid-area: galeria;
+    text-align: center;
     display: flex;
     justify-content: center;
   }
-  #grilla_inicio section img {
-    max-width: 98%;
+  #boton_a_galeria a {
+    text-decoration: none;
+    background-color: #DD5353;
+    border-radius: 4px;
+    padding: 1%;
+  }
+  .imagen_inicio {
+    max-width: 90%;
   }
   .footer {
     display: flex;
@@ -21,6 +53,9 @@
     align-items: center;
     height: auto;
     margin-top: auto;
+  }
+  #ig {
+    text-decoration: none;
   }
   #ig img {
     max-width: 6%;
@@ -47,15 +82,18 @@
     margin-bottom: 2%;
   }
   #titulo_fotos_galeria h5 {
-    color: rgba(240, 248, 255, 0.763); /* variable */
+    color: rgba(240, 248, 255, 0.763);
+    /* variable */
   }
   #titulo_fotos_galeria {
-    background-color: rgba(0, 0, 0, 0.6); /* variable */
+    background-color: rgba(0, 0, 0, 0.6);
+    /* variable */
   }
 }
 @media screen and (min-width: 992px) {
   .color_botones {
-    background-color: #EDDBC0; /* mapa */
+    background-color: #EDDBC0;
+    /* mapa */
   }
   #ig img {
     max-width: 3%;
@@ -66,8 +104,33 @@
 }
 @media screen and (min-width: 1024px) {
   #grilla_inicio {
+    display: grid;
+    grid-template-areas: "texto imagen" "imagen2 texto2";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr auto;
+    align-items: center;
+    justify-content: center;
+    padding: 1%;
+  }
+  .imagen_inicio {
+    max-width: 60%;
+    border-radius: 2%;
+  }
+  #texto1 {
+    grid-area: texto;
+    text-align: center;
+  }
+  #texto2 {
+    grid-area: texto2;
+    text-align: center;
+  }
+  #imagen_inicio1 {
+    grid-area: imagen;
+  }
+  #imagen_inicio2 {
+    grid-area: imagen2;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
   }
   #footer {
     flex-direction: row;
@@ -81,8 +144,27 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
     padding-top: 1%;
     padding-bottom: 1%;
-    background-color: #DBC8AC; /* mapa */
+    background-color: #DBC8AC;
+    /* mapa */
     gap: 2px;
+  }
+  .containerMio {
+    position: relative;
+  }
+  .overlayMio {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: #f1f1f1;
+    /* mapa */
+    width: 100%;
+    transition: 0.5s;
+    opacity: 1;
+    color: white;
+    /* mapa */
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
   }
   #carousel {
     display: none;
@@ -129,9 +211,6 @@
     grid-template-areas: "g1 g2 g3 g4" "g5 g6 g7 g8" "g9 g10 g11 g12";
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-  }
-  .containerMio {
-    position: relative;
   }
   .overlayMio {
     position: absolute;
@@ -230,4 +309,24 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: #DBC8AC; /* mapa */
+}
+
+#selector {
+  width: 325px;
+}
+
+#selector2 {
+  width: 220px;
+}
+
+#boton {
+  padding-top: 1%;
+}
+
+#exampleFormControlInput1 {
+  width: 300px;
+}
+
+#formulario {
+  padding-top: 1%;
 }/*# sourceMappingURL=style.css.map */
