--- a/style/style.scss
+++ b/style/style.scss
@@ -35,12 +35,6 @@
 .pedidos {
     background-color: map-get($map: $colores, $key: main);/* mapa */
 }
-
-/* le cambia el tamaño a la foto de la descripcion */
-.imagen_descripcion {
-    max-width: 60%;
-}
-
 /* a el bloque que contiene a la imagen de la descripcion le aplica un flex para ubicarlo en el centro */
 .imagen_flex {
     display: flex;
@@ -50,6 +44,7 @@
 .texto_descripcion {
     text-align: center;
     width: 85%;
+    padding-bottom: 2%;
 }
 /* saca el margin bottom que viene por defecto en las etiquetas h de bootstrap */
 body header nav div a h2 {
