--- a/style/style.scss
+++ b/style/style.scss
@@ -1,26 +1,20 @@
 @import"./colores/colores";
 @import"./media/media";
+@import"./BoxSizing/BoxSizing";
 
 /* coloca botones del nav al final */
 .barra_final {
     justify-content: end;
 }
-
 /* color principal header y footer */
 .color {
     background-color: map-get($map: $colores, $key: footer_header);/* mapa */
 }
-
 /* aplica flex y alinea titulo de la pagina y logo */
 .titulo_logo {
     display: flex;
     align-items: center;
 }
-/* modifica el tamaño del logo */
-.logo {
-    max-width: 20%;
-}
-
 /* hace un flex en la descripcion y alinea y le da padding y color */
 .descripcion {
     display: flex;
@@ -30,7 +24,6 @@
     padding-bottom: 1%;
     background-color: map-get($map: $colores, $key: main);/* mapa */
 }
-
 /* agrega color de fondo a la parte de pedidos */
 .pedidos {
     background-color: map-get($map: $colores, $key: main);/* mapa */
@@ -40,28 +33,6 @@
     display: flex;
     justify-content: center;
 }
-/* aplica tex-align al texto de la descripcion */
-.texto_descripcion {
-    text-align: center;
-    width: 85%;
-    padding-bottom: 2%;
-}
-/* saca el margin bottom que viene por defecto en las etiquetas h de bootstrap */
-body header nav div a h2 {
-    margin-bottom: 0;
-}
-/* saca el margin bottom que viene por defecto en las etiquetas h de bootstrap */
-body header nav div #navbarNav ul li a h5 {
-    margin-bottom: 0;
-}
-/* tamaño de las imagenes */
-.imageMio {
-    max-width: 100%;
-}
-/* saca el margin bottom que viene por defecto en las etiquetas h de bootstrap */
-h3 {
-    margin-bottom: 0;
-}
 /* aplica un flex al body y le da la estructura vertical con un alto minimo y color */
 body {
     display: flex;
@@ -69,24 +40,3 @@ body {
     min-height: 100vh;
     background-color: map-get($map: $colores, $key: main);/* mapa */
 }
-/* cambia el ancho de formularios en la seccion de pedidos */
-#selector{
-    width: 325px;
-}
-/* cambia el ancho de formularios en la seccion de pedidos */
-#selector2{
-    width: 220px;
-}
-/* reubica el boton de envio de formulario */
-#boton{
-    padding-top: 1%;
-}
-/* cambia el ancho de formularios en la seccion de pedidos */
-#exampleFormControlInput1{
-    width: 300px;
-}
-/* le agruga al formulario de pedidos un padding para separarlo de la nav bar */
-#formulario{
-    padding-top: 1%;
-}
-
