--- a/style/BoxSizing/_BoxSizing.scss
+++ b/style/BoxSizing/_BoxSizing.scss
@@ -43,7 +43,7 @@ body{
         }
     }
 }
-/* tamaño de las imagenes +++++++++++*/
+/* tamaño de las imagenes*/
 .imageMio {
     max-width: 100%;
 }
